package assignment.enemy;

public class Wolf extends Enemy {
    public Wolf() {
        this.hp = 40;
        this.attack = 45;
        this.defense = 5;
        this.speed = 35;
    }
  
}