package entity.item;

import entity.role.Combatant;

public abstract class Item {
    protected String name;

    public Item(String name) {
        this.name = name;
    }

    public String getName() { return name; }


    public Combatant resolveTarget(Combatant user, Combatant suggestedTarget) {
        return user;
    }

    public abstract void use(Combatant target);
}
