@startuml

!pragma PLOT_LIMIT_SIZE 16384

skinparam dpi 300

skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

left to right direction
skinparam classAttributeIconSize 0
allow_mixing

' 这里开始你的类定义...
' ==================== Entry Point ====================
class Main {
    +main(args: String[]) {static}
    -promptFullSetup(cli: UI): GameConfig {static}
    -promptItemChoice(ui: UI, slot: int): int {static}
    -createPlayer(cfg: GameConfig, cli: CLI): Player {static}
    -promptPostGame(ui: UI): int {static}
}
class GameConfig {
    -classChoice: int
    -diffChoice: int
    -itemSlot1: int
    -itemSlot2: int
}
Main +-- GameConfig

' ==================== UI Layer ====================
package "ui" {
    interface UI {
        +print(message: String)
        +readInt(): int
    }
    class CLI {
        -instance: CLI {static}
        +getInstance(): CLI {static}
        +print(message: String)
        +readInt(): int
    }
    CLI ..|> UI
}

' ==================== Control Layer ====================
package "control" {
    interface TurnOrderStrategy {
        +determineTurnOrder(combatants: List<Combatant>): List<Combatant>
    }
    class SpeedBasedTurnOrder {
        +determineTurnOrder(combatants: List<Combatant>): List<Combatant>
    }
    enum Difficulty {
        EASY
        MEDIUM
        HARD
        --
        -levelNo: int
        -pdfDifficultyName: String
        -initialGoblins: int
        -initialWolves: int
        -backupGoblins: int
        -backupWolves: int
        --
        +getLevelNo(): int
        +getPdfDifficultyName(): String
        +getInitialGoblins(): int
        +getInitialWolves(): int
        +getBackupGoblins(): int
        +getBackupWolves(): int
        +hasBackupWave(): boolean
        +fromLevel(levelNo: int): Difficulty {static}
    }
    class RoundController {
        -currentRound: int
        -roles: List<Combatant>
        -players: List<Combatant>
        -enemies: List<Combatant>
        -difficulty: Difficulty
        -turnOrderStrategy: TurnOrderStrategy
        --
        +runBattle(ui: UI, player: Player, difficultyLevel: int)
        +runRound(ui: UI, players: List<Combatant>, enemies: List<Combatant>)
        +addPlayer(player: Player)
        +addRole(role: Combatant)
        +addEnemy(enemy: Combatant)
        +getRoles(): List<Combatant>
        +getPlayers(): List<Combatant>
        +getEnemies(): List<Combatant>
        +setDifficulty(difficulty: Difficulty)
        +setDifficultyFromLevel(levelNo: int)
        +getDifficulty(): Difficulty
        +endBattleRound()
        +getCurrentRound(): int
        -spawnEnemies()
        -spawnBackupEnemies()
        -printRoundStats(ui: UI, players: List<Combatant>, enemies: List<Combatant>)
        -enemyLetter(index: int): String {static}
    }
    SpeedBasedTurnOrder ..|> TurnOrderStrategy
    RoundController o-- TurnOrderStrategy
    RoundController --> Difficulty
}

' ==================== Entity - Role ====================
package "entity.role" {
    abstract class Combatant {
        #name: String
        #hp: int
        #attack: int
        #speed: int
        #defend: int
        #max_hp: int
        -defendBonusRounds: int
        #statusEffects: List<StatusEffect>
        #stop: boolean
        --
        +prepareForTurn(opponents: List<Combatant>)
        +takeAction(target: Combatant)
        +isAlive(): boolean
        +getAttack(attackerAttack: int)
        +getName(): String
        +getHp(): int
        +getAttack(): int
        +getSpeed(): int
        +getDefend(): int
        +modifyDefend(delta: int)
        +modifyAttack(attack: int)
        +modifyHp(delta: int)
        +applyDefendBuff()
        +onEndBattleRound()
        +addStatusEffect(effect: StatusEffect)
        +setStop(stop: boolean)
    }
    abstract class Player {
        #skills: List<SpecialSkill>
        #items: List<Item>
        #ui: UI
        #enemy: List<Combatant>
        -actionStrategy: PlayerActionStrategy
        --
        +setUI(ui: UI)
        +setActionStrategy(strategy: PlayerActionStrategy)
        +learnSkill(skill: SpecialSkill)
        +prepareForTurn(opponents: List<Combatant>)
        +syncEnemyTargets(opponents: List<Combatant>)
        +takeAction(target: Combatant)
        +activateSkill(target: Combatant): boolean {abstract}
        +getSkills(): List<SpecialSkill>
        +getItems(): List<Item>
        +getEnemyTargets(): List<Combatant>
    }
    abstract class Enemy {
        -actionStrategy: EnemyActionStrategy
        --
        +takeAction(targets: Combatant)
    }
    class Warrior {
        -shieldBash: ShieldBash
        --
        +activateSkill(target: Combatant): boolean
    }
    class Wizard {
        -arcaneBlast: AcraneBlast
        --
        +activateSkill(targets: Combatant): boolean
    }
    class Goblin
    class Wolf

    Player --|> Combatant
    Enemy --|> Combatant
    Warrior --|> Player
    Wizard --|> Player
    Goblin --|> Enemy
    Wolf --|> Enemy

    Combatant "1" o-- "*" StatusEffect
}

' ==================== Entity - Action ====================
package "entity.action" {
    interface Action {
        +execute(target: Combatant)
    }
    class BasicAttack {
        -attacker: Combatant
        -target: Combatant
        -attack: int
        --
        +execute(target: Combatant)
    }
    class Defend {
        -defender: Combatant
        --
        +execute(target: Combatant)
    }
    class UseItem {
        -user: Combatant
        -item: Item
        -target: Combatant
        --
        +execute(target: Combatant)
    }

    BasicAttack ..|> Action
    Defend ..|> Action
    UseItem ..|> Action
}

package "entity.action.skills" {
    abstract class SpecialSkill {
        +cooldown: CoolDown
        --
        +isReady(): boolean
        +resetCooldown(turns: int)
        +tickCooldown()
        +getRemainingCooldown(): int
        +execute(target: Combatant) {abstract}
    }
    class ShieldBash {
        -attacker: Combatant
        --
        +execute(target: Combatant)
    }
    class AcraneBlast {
        -user: Combatant
        -targets: List<Combatant>
        --
        +execute(ignored: Combatant)
    }
    class CoolDown {
        -remainingTicks: int
        --
        +pass()
        +set(ticks: int)
        +reset()
        +isReady(): boolean
        +getRemainingTicks(): int
    }

    SpecialSkill ..|> Action
    ShieldBash --|> SpecialSkill
    AcraneBlast --|> SpecialSkill
    SpecialSkill "1" *-- "1" CoolDown
}

' ==================== Entity - Item ====================
package "entity.item" {
    abstract class Item {
        #name: String
        --
        +getName(): String
        +resolveTarget(user: Combatant, suggestedTarget: Combatant): Combatant
        +use(target: Combatant) {abstract}
    }
    class Potion {
        +use(user: Combatant)
    }
    class SmokeBomb {
        +use(target: Combatant)
    }
    class PowerStone {
        -skill: SpecialSkill
        --
        +resolveTarget(user: Combatant, suggestedTarget: Combatant): Combatant
        +use(target: Combatant)
    }

    Potion --|> Item
    SmokeBomb --|> Item
    PowerStone --|> Item
    PowerStone --> SpecialSkill
}

' ==================== Entity - Status ====================
package "entity.status" {
    abstract class StatusEffect {
        #name: String
        #duration: Duration
        --
        +getName(): String
        +tick()
        +onRoundEnd()
        +blocksDamage(): boolean
        +isActive(): boolean
        +apply(target: Combatant) {abstract}
    }
    class Stun {
        +apply(target: Combatant)
    }
    class SmokeBombEffect {
        +apply(target: Combatant)
        +tick()
        +onRoundEnd()
        +blocksDamage(): boolean
    }
    class Duration {
        -remainingRound: int
        --
        +set(a: int)
        +reset()
        +get(): int
        +is_over(): boolean
    }

    Stun --|> StatusEffect
    SmokeBombEffect --|> StatusEffect
    StatusEffect "1" *-- "1" Duration
}

' ==================== Strategy ====================
package "entity.strategy" {
    interface PlayerActionStrategy {
        +chooseAction(self: Player, target: Combatant): Action
    }
    interface EnemyActionStrategy {
        +chooseAction(self: Enemy, target: Combatant): Action
    }
    class MenuInputStrategy {
        -ui: UI
        --
        +chooseAction(self: Player, target: Combatant): Action
        -promptPickEnemy(self: Player, heading: String): Combatant
    }
    class BasicAttackStrategy {
        +chooseAction(self: Enemy, target: Combatant): Action
    }

    MenuInputStrategy ..|> PlayerActionStrategy
    BasicAttackStrategy ..|> EnemyActionStrategy
}

' ==================== Core Associations ====================
Main ..> CLI
Main ..> RoundController
Player o-- PlayerActionStrategy
Enemy o-- EnemyActionStrategy
UseItem --> Item
Player "1" o-- "*" Item
Player "1" o-- "*" SpecialSkill
@enduml
